# retrobus-explorer

./: .env.example  .gitignore  .gitmodules  README.md  main.stanza  pin-tester.stanza  pyproject.toml  sharp-pc-e500-ram-card.stanza  sharp-pc-g850.stanza  slm.toml  stanza.proj
gateware/reference/spade-projects/: .gitignore  README.md  pyproject.toml
gateware/reference/spade-projects/ft-uart-hex-bridge-spade/: pyproject.toml  swim.toml
gateware/reference/spade-projects/ft-uart-hex-bridge-spade/constraints/: pins.xdc
gateware/reference/spade-projects/ft-uart-hex-bridge-spade/scripts/: ft_uart_hex_bridge.py
gateware/reference/spade-projects/ft-uart-hex-bridge-spade/src/: main.spade  msg.spade  protocol.spade
gateware/reference/spade-projects/ft-uart-hex-bridge-spade/test/: test_ft_uart_hex_bridge.py  test_ft_uart_hex_bridge_host.py
gateware/reference/spade-projects/ft-uart-hex-bridge-spade/verilog/: main_wrapper.v
gateware/reference/spade-projects/pin-tester-spade/: pyproject.toml  swim.toml
gateware/reference/spade-projects/pin-tester-spade/constraints/: pins.xdc
gateware/reference/spade-projects/pin-tester-spade/scripts/: test_with_vcd.py
gateware/reference/spade-projects/pin-tester-spade/src/: main.spade
gateware/reference/spade-projects/pin-tester-spade/test/: test_pin_tester.py
gateware/reference/spade-projects/shared-components/: swim.toml
gateware/reference/spade-projects/shared-components/scripts/: test_all_components.py  test_component.py
gateware/reference/spade-projects/shared-components/src/: ascii.spade  boot_banner.spade  bridges.spade  bus_debug.spade  clocking.spade  config.spade  ft_stream.spade  guards.spade  harness.spade  main.spade  memory.spade  message_stream.spade  monitoring.spade  primitives.spade  rv.spade  serial.spade  sharp.spade  trace_events.spade  trace_words.spade
gateware/reference/spade-projects/shared-components/test/: test_async_fifo_u8.py  test_count_on_event_u8.py  test_counter_u8.py  test_falling_edge.py  test_fifo.py  test_fifo_u8.py  test_ft_u16.py  (+14 more)
gateware/reference/spade-projects/shared-verilog/: clk_wiz_0.v
gateware/reference/spade-projects/sharp-organizer-card-spade/: pyproject.toml  swim.toml
gateware/reference/spade-projects/sharp-pc-e500-card-spade/: CONTINUOUS_EXPERIMENT_PLAN.md  EXPERIMENT_PROTOCOL.md  FPGA_PROTOCOL.md  IMPLEMENTATION_PLAN.md  README.md  SUPERVISOR_RPC.md  pyproject.toml  swim.toml
gateware/reference/spade-projects/sharp-pc-g850-bus-spade/: pyproject.toml  swim.toml
gateware/reference/spade-projects/sharp-pc-g850-streaming-rom-spade/: pyproject.toml  swim.toml
gateware/reference/spade-projects/test-minimal-spade/: pyproject.toml  swim.toml
gateware/reference/spade-projects/tools/: boot_banner_test.py  build_with_spadeforge.py  cocotb_helpers.py  flash_with_spadeloader.py  gen_build_info.py  gen_project_xdc.py  gen_xdc_from_acf.py  project.py  project_meta.py  run_tb.py  test_text_filters.py  text_filters.py  web_wave_server.py
gateware/reference/spade-projects/uart-saleae-loopback-spade/: pyproject.toml  swim.toml
jitx-py/: pyproject.toml  run-ruff.sh  run-ty.sh
jitx-py/alchitry-au1-level-shifter/: .gitignore  README.md  main.py  pyproject.toml
jitx-py/alchitry-au1-level-shifter/src/: components.py  main.py
jitx-py/alchitry-v2-elements/: README.md  components.py  main.py  pyproject.toml
jitx-py/alchitry-v2-elements/src/: __init__.py  components.py  generated_data.py  main.py
jitx-py/espi-debug-breakout/: .gitignore  README.md  main.py  pyproject.toml
jitx-py/espi-debug-breakout/src/: components.py  main.py
jitx-py/pin-tester/: README.md  main.py  pyproject.toml
jitx-py/pin-tester/src/: __init__.py  components.py  main.py
jitx-py/pin-tester/src/pin_tester/: __init__.py
jitx-py/retrobus-jitx-parts/: README.md  pyproject.toml
jitx-py/retrobus-jitx-parts/src/retrobus_jitx_parts/: __init__.py
jitx-py/rpi-pico-40-pin-adapter/: README.md  pyproject.toml
jitx-py/rpi-pico-40-pin-adapter/src/: __init__.py  components.py  main.py
jitx-py/saleae-dslab-adapter/: README.md  pyproject.toml
jitx-py/saleae-dslab-adapter/src/: __init__.py  components.py  main.py
jitx-py/shared-components/: README.md  pyproject.toml
jitx-py/shared-components/src/shared_components/: __init__.py  alchitry_v2.py  ffc.py  hirose_df40.py  saleae.py  sharp_organizer.py  testpads.py
jitx-py/sharp-organizer-card/: README.md  main.py  pyproject.toml
jitx-py/sharp-organizer-card/src/: components.py  main.py
jitx-py/sharp-organizer-host/: README.md  main.py  pyproject.toml
jitx-py/sharp-organizer-host/src/: components.py  main.py
jitx-py/sharp-pc-e500-ram-card/: README.md  main.py  pyproject.toml
jitx-py/sharp-pc-e500-ram-card/src/: components.py  main.py
jitx-py/sharp-pc-g850-bus/: README.md  main.py  pyproject.toml
jitx-py/sharp-pc-g850-bus/src/: components.py  main.py
jitx-py/sharp-sc61860-interposer/: README.md  main.py  pyproject.toml
jitx-py/sharp-sc61860-interposer/src/: components.py  main.py
jitx-py/sharp-sc62015-interposer/: .gitignore  README.md  main.py  pyproject.toml
jitx-py/sharp-sc62015-interposer/src/: components.py  main.py
pin-tester-py/: .gitignore  .venv_sync_last  README.md  main.py  pyproject.toml
pin-tester-py/pin_tester/: components.py  main.py
py/: .gitignore  __init__.py  intel-hex.py  jitx-to-fpga-mapping.py  jitx_to_fpga_mapping.py  perfetto_pb2.py  pyproject.toml  setup.py  sharp-pc-g850.py  test_jitx_to_fpga_mapping.py
py/d3xx/: README.md  __init__.py  _ftd3xx_linux.py  _ftd3xx_win32.py  defines.py  ftd3xx.py
py/pyz80/: .gitignore  README.md  pyz80.cc  setup.py
py/retrobus_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py/shared/: __init__.py
py/shared/pyz80/: README.md  pyz80-test.py
py/z80bus/: bus_parser.py  key_matrix.py  sed1560.py  server.py  test_bus_parser.py  test_key_matrix.py  test_multiprocessing.py  test_sed1560.py  test_server.py
saleae-dslab-adapter-py/: README.md  main.py  pyproject.toml
saleae-dslab-adapter-py/saleae_dslab_adapter/: __init__.py  components.py  main.py
(+448 files in other folders)
