[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "retrobus-explorer"
version = "0.1.0"
description = "Retrocomputing bus exploration tools"
authors = [{name = "mblsha", email = "mblsha@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "marimo",
    "pytest",
    "protobuf",
    "pybind11",
    "Pillow",
    "fastapi",
    "uvicorn",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

# https://docs.marimo.io/guides/editor_features/language_server/#installation
[tool.marimo.experimental]
lsp = true

# Language server configuration
[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable the Python language server
enable_mypy = true           # Type checking with mypy (enabled by default, if installed)
enable_ruff = true           # Linting with ruff (enabled by default, if installed)
enable_flake8 = false        # Linting with flake8
enable_pydocstyle = false    # Check docstring style
enable_pylint = false        # Linting with pylint
enable_pyflakes = false      # Syntax checking with pyflakes

# Diagnostics configuration
[tool.marimo.diagnostics]
enabled = true               # Show diagnostics in the editor

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
