[build-system]
requires = ["hatchling>=1.27.0,<2.0"]
build-backend = "hatchling.build"

[project]
name = "pin-tester-py"
version = "0.1.0"
description = "Python JITX port scaffold for the retrobus pin-tester board"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jitx>=4.0.0,<5",
  "jitxlib-parts>=1.0.0,<2",
  "jitxlib-standard>=4.0.0,<5",
  "jitxexamples-components>=1.0.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["pin_tester"]
