[build-system]
requires = ["hatchling>=1.27.0,<2.0"]
build-backend = "hatchling.build"

[project]
name = "saleae-dslab-adapter-py"
version = "0.1.0"
description = "Partial Python-based JITX scaffold for the Saleae to DSLogic adapter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jitx>=4.0.0,<5",
  "jitxlib-parts>=1.0.0,<2",
  "jitxlib-standard>=4.0.0,<5",
  "jitxexamples-components>=1.0.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["saleae_dslab_adapter"]
