[project]
name = "spade-projects-umbrella"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cocotb<2",
]

[tool.uv.workspace]
members = [
    "pin-tester-spade",
    "sharp-organizer-card-spade",
    "sharp-pc-g850-bus-spade",
    "sharp-pc-g850-streaming-rom-spade",
    "test-minimal-spade",
    "uart-saleae-loopback-spade",
]
